--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,5 +4,13 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
-}
+  "background_color": "#ffffff",
+
+  "icons": [
+    {
+      "src": "favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/x-icon"
+    }
+  ]
+} 
